fix: Fixing alignment

--- a/src/pages/leaderboard/leaderboard.css
+++ b/src/pages/leaderboard/leaderboard.css
@@ -47,3 +47,7 @@ thead {
     padding-left: 1rem;
     padding-right: 1rem;
 }
+
+.username {
+    text-align: left;
+}
